@@ -1,3 +1,14 @@
+2010-07-09  Patrick Gansterer  <paroga@paroga.com>
+
+        Reviewed by Kent Tamura.
+
+        [WINCE] Buildfix for EventHandlerWin
+        https://bugs.webkit.org/show_bug.cgi?id=41909
+
+        Use Clipboard.h instead of ClipboardWin.h on WinCE.
+
+        * page/win/EventHandlerWin.cpp:
+
 2010-07-09  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r62946.
